fixed negation infix sugar issue, fixed baseline/middle spacing for fractions

--- a/wise/static/style.css
+++ b/wise/static/style.css
@@ -155,6 +155,7 @@ body {
 
 .fraction {
     height: inherit;
+    vertical-align: middle;
 }
 
 .negate {
@@ -163,11 +164,21 @@ body {
 }
 
 .container {
+    /* This is the one element that is raising some issues */
     display: inline-block;
-    vertical-align: middle;
     height: inherit;
     padding-left: 5px;
     padding-right: 5px;
+}
+
+.baseline {
+    display: inline-block;
+    vertical-align: baseline;
+}
+
+.middle {
+    display: inline-block;
+    vertical-align: middle;
 }
 
 .pnths {
